--- a/client/src/pages/homePage.module.css
+++ b/client/src/pages/homePage.module.css
@@ -4,8 +4,8 @@
   text-align: center;
   padding: 20px;
   background-color: #ffffff;
-  
   width: 95%;
+  max-width: 1000px;
   margin: 0 auto;
   box-sizing: border-box;
 }
@@ -27,21 +27,30 @@
   
 }
 
+.img {
+  width: 100%;
+  max-width: 380px;
+  height: auto;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.imageSection {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
 /* .nav {
   margin-bottom: 20px;
 } */
 
 
-
-.imageSection {
-  margin: 20px 0;
-}
-
 /*Styles for larger screens*/
 
 @media (min-width: 768px) {
   .home {
-    max-width: 700px;
+    max-width: 800px;
   }
 }
 
